# reventsource

./: .travis.yml  Cargo.toml  README.md
examples/: reqwest.rs
src/: consumer.rs  event.rs  lib.rs  parser.rs
