[package]
name = "reventsource"
version = "0.0.0"
authors = ["Liu Chong <mail@liuchong.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/liuchong/reventsource"
homepage = "https://github.com/liuchong/reventsource"
description = """
Rust eventsource implementation.
"""
keywords = ["reventsource", "eventsource", "sse"]

[package.metadata.x]
lint = "cargo clippy --verbose --all-targets --all-features -- -D warnings"
test = "cargo test --verbose --all --release"
build = "cargo build --verbose --all --release"

[dependencies]

[dev-dependencies]
reqwest = "0.9.9"
